# fast-automata

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  setup.py
.github/workflows/: build.yml
docs/: installation.md
fastautomata/: APIAttachment.py  Agents.py  BaseClasses.py  Board.py  ClassTypes.py  LocalDraw.py  TestSuite.py  fastautomata_clib.cp312-win_amd64.pyd  fastautomata_clib.pyi  tests.py  tests2.py
fastautomata/include/fastautomata/: Agents.cpp  Agents.hpp  Board.cpp  Board.hpp  CMakeLists.txt  ClassTypes.hpp  bindings.cpp
pybuild/: fast_automata-0.3.0-py3-none-any.whl
tests/: basic.py  clib.py  tests.py  tests2.py
